[gd_scene load_steps=3 format=3 uid="uid://dcjwh47q7khid"]

[ext_resource type="Script" uid="uid://x73uc10yt3sy" path="res://Scripts/settings_menu.gd" id="1_8ef0u"]
[ext_resource type="FontFile" uid="uid://rd8qo46nok5b" path="res://Art/ByteBounce.ttf" id="1_icv2g"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ef0u")

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
offset_left = 46.0
offset_top = 138.0
offset_right = 250.0
offset_bottom = 157.0
theme_override_fonts/font = ExtResource("1_icv2g")
text = "Back"

[node name="FullscreenCheckBox" type="CheckBox" parent="."]
layout_mode = 2
offset_left = 43.0
offset_top = 113.0
offset_right = 307.0
offset_bottom = 137.0
button_pressed = true

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 37.0
offset_top = 75.0
offset_right = 252.0
offset_bottom = 91.0

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 19.0
offset_top = 32.0
offset_right = 283.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("1_icv2g")
text = "Settings Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -70.0
offset_top = 60.0
offset_right = 194.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("1_icv2g")
text = "Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = -53.0
offset_top = 104.0
offset_right = 211.0
offset_bottom = 129.0
theme_override_fonts/font = ExtResource("1_icv2g")
text = "FullScreen
"
horizontal_alignment = 1
vertical_alignment = 1
